--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -130,6 +130,7 @@ version 27-git (????-??-??):
   - enhancement: userpanel:finance module, allow to control type of value shown
     to the customer - with discount included or without (default) [interduo]
   - enhancement: network properties can be selected in quick search field [chilan]
+  - improvement: added 60 and 90 days values in customer assignment filters [chilan]
 
 version 26.0 (2020-12-15):
 
