--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -139,6 +139,8 @@ version 27-git (????-??-??):
   - enhancement: change the way liabilities data are displayed [ravvar]
   - enhancement: introduce 'phpui.default_assignment_list_dataset' configuration variable to set default dataset
     in liabilities list ('gross' by default) [ravvar]
+  - enhancement: lms-notify.php backend script allows to notify customers (and operator) about expiring document
+    pending action date [chilan]
 
 version 26.0 (2020-12-15):
 
