enhancement: new reward/penalty tariff flags: electronic invoice, e-mail marketing and sms marketing

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -142,7 +142,7 @@ version 27-git (????-??-??):
   - enhancement: lms-notify.php backend script allows to notify customers (and operator) about expiring document
     pending action date [chilan]
   - enhancement: added new customer consents - e-mail marketing and sms marketing [chilan]
-  - enhancement: new reward/penalty tariff flags: e-mail marketing and sms marketing [chilan]
+  - enhancement: new reward/penalty tariff flags: electronic invoice, e-mail marketing and sms marketing [chilan]
 
 version 26.0 (2020-12-15):
 
