improvement: allow to search customers by starting with phrase in customer name (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -143,6 +143,7 @@ version 27-git (????-??-??):
     pending action date [chilan]
   - enhancement: added new customer consents - e-mail marketing and sms marketing [chilan]
   - enhancement: new reward/penalty tariff flags: electronic invoice, e-mail marketing and sms marketing [chilan]
+  - improvement: allow to search customers by starting with phrase in customer name [chilan]
 
 version 26.0 (2020-12-15):
 
