improvement: if GUS-REGON api returns many matched entities for single company identifier then allow to select it from modal dialog (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -145,6 +145,8 @@ version 27-git (????-??-??):
   - enhancement: new reward/penalty tariff flags: electronic invoice, e-mail marketing and sms marketing [chilan]
   - improvement: allow to search customers by starting with phrase in customer name [chilan]
   - enhancement: user issuer property allow to mask issuer name on documents [chilan]
+  - improvement: if GUS-REGON api returns many matched entities for single company identifier then allow
+    to select it from modal dialog [chilan]
 
 version 26.0 (2020-12-15):
 
