enhancement: store customer group assignment history in database (uke income report can take customer group assignment history into account) (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -150,6 +150,7 @@ version 27-git (????-??-??):
   - enhancement: waiting assignments filter in customer search form [chilan]
   - improvement: 'payments.reward_penalty_deadline_grace_days' allows to be more polite for customers while
     checking if they apply to reward/penalty for on-time payments (default: 0) [chilan]
+  - enhancement: uke income report can take customer group assignment history into account [chilan]
 
 version 26.0 (2020-12-15):
 
