enhancement: support for /31 networks (changelog entry)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -156,6 +156,7 @@ version 27-git (????-??-??):
   - improvement: new 'active, without nodes' and 'waiting, without nodes' assignment filter selection
     in customer search form [chilan]
   - enhancement: allow to mark division as natural person (usefull for JPK reports) [chilan]
+  - enhancement: support for /31 networks [chilan]
 
 version 26.0 (2020-12-15):
 
