enhancement: added 'not sent to email' filter on invoice list (LMS+ fixes #1826)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -167,6 +167,7 @@ version 27-git (????-??-??):
     financial software [chilan]
   - enhancement: implemented --interval, --part-number, part-size parameter support with corresponding configuration
     variables in lms-notify.php backend script [chilan]
+  - enhancement: added 'not sent to email' filter on invoice list [chilan]
 
 version 26.0 (2020-12-15):
 
