--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -168,6 +168,8 @@ version 27-git (????-??-??):
   - enhancement: implemented --interval, --part-number, part-size parameter support with corresponding configuration
     variables in lms-notify.php backend script [chilan]
   - enhancement: added 'not sent to email' filter on invoice list [chilan]
+  - enhancement: lms-ui-tooltip-persistent allows to easily define element with toolips which are closed after
+    click out of them or mouse enter to them and then mouse leave [chilan]
 
 version 26.0 (2020-12-15):
 
