--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -171,6 +171,8 @@ version 27-git (????-??-??):
   - enhancement: lms-ui-tooltip-rollover allows to easily define element with toolips which are closed after
     click out of them or mouse enter to them and then mouse leave [chilan]
   - enhancement: lms-ui-tooltip-toggle elements toggle tooltip after click [chilan]
+  - enhancement: new smarty function 'hint' allows to conveniently embed hint buttons (supported modes
+    are 'toggle' and 'rollover') [chilan]
 
 version 26.0 (2020-12-15):
 
