--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -174,6 +174,7 @@ version 27-git (????-??-??):
   - enhancement: new smarty function 'hint' allows to conveniently embed hint buttons (supported modes
     are 'toggle' and 'rollover') [chilan]
   - enhancement: lms-notify.php support new action 'node-warning' which uses node warning flag [chilan]
+  - improvement: more notification symbols to use for ticket mail notification [interduo]
 
 version 26.0 (2020-12-15):
 
