--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -175,6 +175,7 @@ version 27-git (????-??-??):
     are 'toggle' and 'rollover') [chilan]
   - enhancement: lms-notify.php support new action 'node-warning' which uses node warning flag [chilan]
   - improvement: more notification symbols to use for ticket mail notification [interduo]
+  - improvement: 'mail.debug_level' can be applied when 'mail.debug_email' is not specified [chilan]
 
 version 26.0 (2020-12-15):
 
