enhancement: implemented new group action on ticket list 'mark as read' (LMS+ fixes #1848)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -178,6 +178,7 @@ version 27-git (????-??-??):
   - improvement: 'mail.debug_level' can be applied when 'mail.debug_email' is not specified [chilan]
   - improvement: changed default value of 'mail.backend' from 'pear' to 'phpmailer' [chilan]
   - enhancement: added 'without location address' status filter in customerlist and customersearch forms [chilan]
+  - enhancement: implemented new group action on ticket list 'mark as read' [chilan]
 
 version 26.0 (2020-12-15):
 
