--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -190,6 +190,7 @@ version 27-git (????-??-??):
   - enhancement: '{speech_recognition}' smarty function allows to easily insert speech recognition
     buttons into forms [chilan]
   - devel: added 'storage' directory which will contain different file resources [chilan]
+  - enhancement: customer call archive support [chilan]
 
 version 26.0 (2020-12-15):
 
