--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -191,6 +191,7 @@ version 27-git (????-??-??):
     buttons into forms [chilan]
   - devel: added 'storage' directory which will contain different file resources [chilan]
   - enhancement: customer call archive support [chilan]
+  - improvement: lms-notify.php: 'customer-status' action handles customer status parameter [chilan]
 
 version 26.0 (2020-12-15):
 
