--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -192,9 +192,11 @@ version 27-git (????-??-??):
   - devel: added 'storage' directory which will contain different file resources [chilan]
   - enhancement: customer call archive support [chilan]
   - improvement: lms-notify.php: 'customer-status' action handles customer status parameter [chilan]
-  - enhancement: add support for liabilities, tariffs and invoices in net terms [chilan/ravvar]
-  - enhancement: end support for 'invoices.credit note relation_to_invoice' configuration variable
+  - enhancement: added support for liabilities, tariffs and invoices in net terms [chilan/ravvar]
+  - enhancement: removed support for 'invoices.credit_note_relation_to_invoice' configuration variable
     for invoice correction [ravvar]
+  - enhancement: added 'invoices.show pricing method' configuration variable which allows display information
+    about pricing method on invoice or invoice correction print [ravvar]
 
 version 26.0 (2020-12-15):
 
