--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -196,7 +196,7 @@ version 27-git (????-??-??):
   - enhancement: removed support for 'invoices.credit_note_relation_to_invoice' configuration variable
     for invoice correction [ravvar]
   - enhancement: added 'invoices.show_pricing_method' configuration variable which allows display information
-    about pricing method on invoice or invoice correction print [ravvar]
+    about pricing method on invoice or invoice correction print ('true' by default) [ravvar]
 
 version 26.0 (2020-12-15):
 
