enhancement: implemented identity document expiration date (LMS+ #1891)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -197,6 +197,7 @@ version 27-git (????-??-??):
     for invoice correction [ravvar]
   - enhancement: added 'invoices.show_pricing_method' configuration variable which allows display information
     about pricing method on invoice or invoice correction print ('true' by default) [ravvar]
+  - enhancement: implemented identity document expiration date [chilan]
 
 version 26.0 (2020-12-15):
 
