--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -209,6 +209,9 @@ version 27-git (????-??-??):
   - enhancement: lms-notify.php 'events' type notifications support formatting of subject and message
     contents ('%title' and '%description' symbols are supported for now) [chilan]
   - improvement: change presentation of the number plans in invoices forms [ravvar]
+  - improvement: changed default invoice generation backend from 'html' to 'pdf' [chilan]
+  - improvement: 'invoices.cnote_template_file' inherits its default value
+    from 'invoices.template_file' [chilan]
 
 version 26.0 (2020-12-15):
 
