--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -208,13 +208,13 @@ version 27-git (????-??-??):
   - improvement: logical conjunction selection for customer group selection in search form [chilan]
   - enhancement: lms-notify.php 'events' type notifications support formatting of subject and message
     contents ('%title' and '%description' symbols are supported for now) [chilan]
-  - improvement: change presentation of the number plans in invoices forms [ravvar]
+  - improvement: change presentation of the number plans in document forms [ravvar]
   - improvement: changed default invoice generation backend from 'html' to 'pdf' [chilan]
   - improvement: 'invoices.cnote_template_file' inherits its default value
     from 'invoices.template_file' [chilan]
   - improvement: hide resolved tickets in customer tickets panel
     (variable: phpui.default_show_closed_tickets, default: false) [interduo]
-    
+
 version 26.0 (2020-12-15):
 
   - enhancement: 'invoices.proforma_conversion_comment_format' allows to define comment format
