--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,7 @@ $Id$
 version 28-git (????-??-??):
 
   - improvement: 'phpui.call_phone_url' support in ticket view form [chilan]
+  - improvement: implemented 'all suspended' for assignment filter [chilan]
 
 version 27.0 (2021-08-20):
 
