--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -4,6 +4,7 @@ version 28-git (????-??-??):
 
   - improvement: 'phpui.call_phone_url' support in ticket view form [chilan]
   - improvement: implemented 'all suspended' for assignment filter [chilan]
+  - enhancement: ticket watching support [interduo]
 
 version 27.0 (2021-08-20):
 
