--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -9,6 +9,7 @@ version 28-git (????-??-??):
     by 'invoices.show_balance_summary' [chilan]
   - enhancement: allow to search nodes by creation date period [chilan]
   - improvement: show total debt value for customers with debt collection status [chilan]
+  - improvement: changed default value of variable rt.auto_open to true [interduo]
 
 version 27.0 (2021-08-20):
 
