--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -12,6 +12,7 @@ version 28-git (????-??-??):
   - improvement: changed default value of variable rt.auto_open to true [interduo]
   - enhancement: 'get_supported_actions' hook used in lms-notify.php allows plugins to inform core
     about correct custom action syntax [chilan]
+  - enhancement: added csv export of operation history report [chilan]
 
 version 27.0 (2021-08-20):
 
