--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -15,6 +15,8 @@ version 28-git (????-??-??):
   - enhancement: added csv export of operation history report [chilan]
   - enhancement: new '%commented_balance' symbol support added in lms-notify.php backend script and
     send invoice process [chilan]
+  - improvement: --force parameter of lms-gps.php script allows to determine gps coordinates
+    for network resources event if they already have non-empty coords [chilan]
 
 version 27.0 (2021-08-20):
 
