--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -17,6 +17,7 @@ version 28-git (????-??-??):
     send invoice process [chilan]
   - improvement: --force parameter of lms-gps.php script allows to determine gps coordinates
     for network resources event if they already have non-empty coords [chilan]
+  - enhancement: implemented validity period support for promotions and promotion schemas [chilan]
 
 version 27.0 (2021-08-20):
 
