--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -19,6 +19,7 @@ version 28-git (????-??-??):
     for network resources event if they already have non-empty coords [chilan]
   - enhancement: implemented validity period support for promotions and promotion schemas [chilan]
   - enhancement: new customer search filter - cutoffstop date interval [chilan]
+  - enhancement: userpanel: added status selection of customers allowed to login [chilan]
 
 version 27.0 (2021-08-20):
 
