enhancement: new '%commented_balance' symbol support added in messageadd form

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -13,8 +13,8 @@ version 28-git (????-??-??):
   - enhancement: 'get_supported_actions' hook used in lms-notify.php allows plugins to inform core
     about correct custom action syntax [chilan]
   - enhancement: added csv export of operation history report [chilan]
-  - enhancement: new '%commented_balance' symbol support added in lms-notify.php backend script and
-    send invoice process [chilan]
+  - enhancement: new '%commented_balance' symbol support added in lms-notify.php backend script,
+    send invoice process and messageadd form [chilan]
   - improvement: --force parameter of lms-gps.php script allows to determine gps coordinates
     for network resources event if they already have non-empty coords [chilan]
   - enhancement: implemented validity period support for promotions and promotion schemas [chilan]
